<resources>
    <string name="app_name">Mobile Inventory</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="create">Create</string>
    <string name="refresh">Refresh</string>
    <string name="server_url">Server URL</string>
    <string name="database">Database</string>
    <string name="rfid_power">RFID Power</string>
    <string name="rfid_pairing">RFID Pairing</string>
    <string name="register_item">Register Item</string>
    <string name="stock_opname">Stock Opname</string>
    <string name="placement">Placement</string>
    <string name="transfer">Transfer Out</string>
    <string name="transfer_in">Transfer Received</string>
    <string name="shipment">Shipment</string>
    <string name="find_assets">Find Assets</string>
    <string name="rfid_number">RFID Number</string>
    <string name="qr_code">QR Code</string>
    <string name="scan_rfid_init">Press Start to Scan RFID!</string>
    <string name="scan_rfid_tag">Scan RFID Tag!</string>
    <string name="scan_qr_code">Scan QR Code!</string>
    <string name="upload_data">Click "Upload Data" to continue!</string>
    <string name="upload">Upload</string>
    <string name="reset">Reset</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="search_by">Search By</string>
    <string name="serial_number">Sticker No</string>
    <string name="product_code">Product Code</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="start_location">Start locate</string>
    <string name="stop_location">Stop locate</string>
    <string name="location">Location</string>
    <string name="shelf">Shelf</string>
    <string name="shelf_slot">Shelf Slot</string>
    <string name="start_stock_opname">Start Stock Opname</string>
    <string name="searchRange">Search range</string>
    <string name="dash">-</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="confirm">Confirm</string>

    <string name="ble_not_supported">Device does not support BLE</string>
    <string name="invalid_bluetooth_address">Bluettoh Device not available!</string>
    <string name="connect_reader">Connect device</string>
    <string name="title_stop_read_card">Please stop reading tags!</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Scanning...</string>
    <string name="select_device">Select a device</string>
    <string name="none_paired">No Matching</string>
    <string name="none_found">Not found</string>
    <string name="title_paired_devices">Matched</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="title_activity_uhfmain">UHF</string>
    <string name="scan">Scan</string>
    <string name="paired">paired</string>
    <string name="history_connected_device">Historically connected devices</string>
    <string name="clear_historical_records">Empty historical records</string>
    <string name="no_history">No history</string>

    <string name="connecting">Connecting</string>
    <string name="connect_success">Successful connection</string>
    <string name="disconnect">Disconnected!</string>

    <string name="location_level_0">Warehouse</string>
    <string name="location_level_1">Area</string>
    <string name="location_level_2">Hall</string>
    <string name="location_level_3">Shelf</string>
    <string name="location_level_4">Shelf Slot</string>
    <string name="select_location">Select Location</string>
    <string name="master_item">Master Item</string>
    <string name="select_master_item">Select Master Item</string>
    <string name="include_sublocation">Include Sub Location</string>
    <string name="sku_filter">SKU Filter (optional)</string>
    <string name="select_sku">Select SKU</string>
    <string name="stock_opname_note">Note (optional)</string>
    <string name="done">Done</string>

    <string name="search_master_item">Search Master Item</string>
    <string name="sku">PN</string>
    <string name="product_name">Product Name</string>
    <string name="count">Item Count</string>
    <string name="quantity_per_item">Quantity per Item</string>

    <string name="item_type">Item Type</string>
    <string name="type_item">Item</string>
    <string name="type_group">Group</string>
    <string name="type_bom">Bill of Materials</string>

    <string name="remove_item">Remove</string>
    <string name="view_child_items">View Child Items</string>
    <string name="remove_item_confirm_title">Remove Item</string>
    <string name="remove_item_confirm_message">Remove this item from the list? You can scan it again afterwards.</string>
    <string name="child_items">Child Items</string>
    <string name="no_child_items">No child items found.</string>
    <string name="select_action">-- Select an action --</string>
    <string name="process_item_group">Process the Item Group</string>
    <string name="child_item_ungroup">Child Item (Ungroup)</string>
    <string name="ungroup_result">%1$s ungrouped into %2$d item(s)</string>

    <!-- Placement scan-result tabs -->
    <string name="tab_ready_to_upload">Ready to Upload</string>
    <string name="tab_needs_review">Needs Review</string>
    <string name="resolve_group_item_title">Resolve Group Item: %1$s</string>
    <string name="resolve_child_item_title">Resolve Child Item: %1$s</string>
    <string name="action_add_whole_group">Add Whole Group</string>
    <string name="action_select_child_items">Select Child Items (Ungroup)</string>
    <string name="action_ungroup_from_parent">Ungroup from Parent</string>
    <string name="child_item_badge_desc">Child Item</string>
    <string name="upload_blocked_needs_review">Resolve all items in \"Needs Review\" before uploading.</string>
    <string name="no_items_in_tab">No items.</string>
    <string name="failed_load_group_items">Failed to load group items! Please try again.</string>

    <!-- Transfer Out: source-location mismatch -->
    <string name="resolve_mismatch_item_title">Wrong Location: %1$s</string>
    <string name="action_refresh_location">Refresh Location</string>
    <string name="wrong_location_status">Wrong location: currently at %1$s</string>
    <string name="wrong_location_status_unknown">Wrong location</string>
    <string name="failed_refresh_location">Failed to refresh item location! Please try again.</string>

    <!-- Transfer In: receiving/scan-checklist tabs -->
    <string name="tab_not_scanned">Not Scanned</string>
    <string name="tab_scanned">Scanned</string>
    <string name="action_mark_scanned">Mark as Scanned</string>
    <string name="not_expected_status">Not part of this transfer</string>
</resources>
