<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.StockOpnameFragment"
    android:padding="8dp"
    >

    <!-- Location -->
    <TextView
        android:id="@+id/labelLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_level_0"
        android:textSize="12sp"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:textColor="@color/primary"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_location"
        android:textSize="15sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="10dp"
        android:drawablePadding="8dp"
        style="@style/Widget.AppCompat.EditText"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@id/labelLocation" />

    <!-- Shelf -->
    <TextView
        android:id="@+id/labelLocation1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:text="@string/location_level_1"
        android:textColor="@color/primary"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textLocation"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textLocation1"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/select_location"
        android:inputType="none"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/labelLocation1"
        tools:layout_editor_absoluteX="8dp" />

    <!-- Shelf Slot -->
    <TextView
        android:id="@+id/labelLocation2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:text="@string/location_level_2"
        android:textColor="@color/primary"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textLocation1"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textLocation2"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/select_location"
        android:inputType="none"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/labelLocation2"
        tools:layout_editor_absoluteX="8dp" />

    <!-- Location 3 -->
    <TextView
        android:id="@+id/labelLocation3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:text="@string/location_level_3"
        android:textColor="@color/primary"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textLocation2"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textLocation3"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/select_location"
        android:inputType="none"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/labelLocation3"
        tools:layout_editor_absoluteX="8dp" />

    <!-- Location 4 -->
    <TextView
        android:id="@+id/labelLocation4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:text="@string/location_level_4"
        android:textColor="@color/primary"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textLocation3"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textLocation4"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/select_location"
        android:inputType="none"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/labelLocation4"
        tools:layout_editor_absoluteX="8dp" />

    <!-- SKU filter (optional, multiple) -->
    <TextView
        android:id="@+id/labelSku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sku_filter"
        android:textSize="12sp"
        android:textColor="@color/primary"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/textLocation4" />

    <TextView
        android:id="@+id/textSku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_sku"
        android:textSize="15sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="10dp"
        android:drawablePadding="8dp"
        style="@style/Widget.AppCompat.EditText"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@id/labelSku" />

    <!-- Note (optional) -->
    <TextView
        android:id="@+id/labelNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_opname_note"
        android:textSize="12sp"
        android:textColor="@color/primary"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/textSku" />

    <EditText
        android:id="@+id/editNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textMultiLine|textCapSentences"
        android:maxLength="1000"
        android:maxLines="3"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/labelNote" />

    <!-- Bottom button -->
    <CheckBox
        android:id="@+id/chkSubLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/include_sublocation"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/editNote"
        android:checked="false"/>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/start_stock_opname"
        style="@style/PrimaryButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/chkSubLoc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>