<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SetupActivity">

    <LinearLayout
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/layoutBottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/SecondaryButtonStyle"
            android:id="@+id/btnCancel" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/PrimaryButtonStyle"
            android:id="@+id/btnSave" />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layoutBottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:id="@+id/layoutContent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/lightGrey"
            android:hint="@string/server_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etServerUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/lightGrey"
            android:layout_height="wrap_content"
            android:text="@string/rfid_power"/>
        <Spinner
            android:id="@+id/spinPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:padding="0dp"
            android:theme="@android:style/Theme.Holo.Light"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>