<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ShipmentCreateFragment"
    android:padding="8dp"
    >

    <!-- Location -->
    <TextView
        android:id="@+id/labelLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_level_0"
        android:textSize="12sp"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:textColor="@color/primary"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_location"
        android:textSize="15sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="10dp"
        android:drawablePadding="8dp"
        style="@style/Widget.AppCompat.EditText"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@id/labelLocation" />

    <!-- Shelf -->
    <TextView
        android:id="@+id/labelLocation1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_level_1"
        android:textSize="12sp"
        android:textColor="@color/primary"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/textLocation" />

    <TextView
        android:id="@+id/textLocation1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_location"
        android:textSize="15sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="10dp"
        android:drawablePadding="8dp"
        style="@style/Widget.AppCompat.EditText"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:inputType="none"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/labelLocation1" />

    <!-- Shelf Slot -->
    <TextView
        android:id="@+id/labelLocation2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_level_2"
        android:textSize="12sp"
        android:textColor="@color/primary"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/textLocation1" />

    <TextView
        android:id="@+id/textLocation2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_location"
        android:textSize="15sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="10dp"
        android:drawablePadding="8dp"
        style="@style/Widget.AppCompat.EditText"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:inputType="none"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/labelLocation2" />

    <!-- Location 3 -->
    <TextView
        android:id="@+id/labelLocation3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_level_3"
        android:textSize="12sp"
        android:textColor="@color/primary"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/textLocation2" />

    <TextView
        android:id="@+id/textLocation3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_location"
        android:textSize="15sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="10dp"
        android:drawablePadding="8dp"
        style="@style/Widget.AppCompat.EditText"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:inputType="none"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/labelLocation3" />

    <!-- Location 4 -->
    <TextView
        android:id="@+id/labelLocation4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_level_4"
        android:textSize="12sp"
        android:textColor="@color/primary"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/textLocation3" />

    <TextView
        android:id="@+id/textLocation4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_location"
        android:textSize="15sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="10dp"
        android:drawablePadding="8dp"
        style="@style/Widget.AppCompat.EditText"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:inputType="none"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/labelLocation4" />

    <!-- Bottom button -->
    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/start_stock_opname"
        style="@style/PrimaryButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
