<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ChildItemsFragment">
    <RelativeLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/textGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="4dp"
            android:layout_alignParentStart="true"
            />
        <Spinner
            android:id="@+id/spinnerAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/textGroupName"
            tools:visibility="visible"
            />
        <TextView
            android:id="@+id/textEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_child_items"
            android:textAlignment="center"
            android:padding="8dp"
            android:visibility="gone"
            android:layout_below="@id/spinnerAction"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        style="@style/PrimaryButtonStyle"
        android:text="@string/confirm"
        android:visibility="gone"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/lightGrey"
        app:layout_constraintTop_toBottomOf="@id/layoutTop"
        app:layout_constraintBottom_toTopOf="@id/buttonConfirm" />
</androidx.constraintlayout.widget.ConstraintLayout>
